--- a/Basic_project2/style.css
+++ b/Basic_project2/style.css
@@ -1,10 +1,8 @@
 .container {
-    display: flex;
-    text-align: center;
-    width: 100%;
-    height: 100vh;
+    width: 575px;
+    height: 670px;
     background-color: #797979;
-
+    padding-left: 30px;
 }
 h1{
     padding-left: 15px;
@@ -14,16 +12,27 @@ h1{
 #height, #weight{
     width: 150px;
     height: 25px;
-    margin-top: 60px;
+    margin-top: 30px;
     
 }
 button {
     width: 150px;
     height: 25px;
-    margin-top: 30px;
-    margin-left: 75px;
+    margin-top: 20px;
+    margin-left: 85px;
+    padding: 1px 30px;
+    border-radius: 8px;
+    font-weight: bold;
+}
+#result{
+    font-size: 30px;
+    margin-left: 85px;
+    margin-top: 20px;
+    color: white;
 }
 #weight_guide{
     margin-left: 75px;
     margin-top: 25px;
+    font-size: 15px;
+    font-weight: bold;
 }
