--- a/Basic_project2/style.css
+++ b/Basic_project2/style.css
@@ -36,3 +36,9 @@ button {
     font-size: 15px;
     font-weight: bold;
 }
+#weight_validation{
+    font-size: 30px;
+    margin-left: 85px;
+    margin-top: 20px;
+    color: white;
+}
