--- a/Basic_project4/style.css
+++ b/Basic_project4/style.css
@@ -1,4 +1,74 @@
 body{
+    width: 300px;
+    max-width: 750px;
+    min-width: 480px;
     background-color: #212121;
     color: white;
+    font-family: 'Roboto', sans-serif;
+    margin: 0 auto;
 }
+
+#wrapper {
+    box-sizing: border-box;
+    text-align: center;
+    width: 450px;
+    height: 550px;
+    background-color: #474747;
+    font-size: 25px;
+}
+h1{
+    background-color: #161616;
+    color: rgb(244, 238, 238);
+    text-align: center;
+}
+#guess {
+    font-size: 45px;
+    margin-top: 120px;
+    color: #fff;
+}
+
+#guessfield{
+    color: #000;
+    width: 250px;
+    height: 50px;
+    font-size: 30px;
+    border-style: none;
+    margin-top: 25px;
+}
+
+#sub {
+    background-color: #141414;
+    color: white;
+    width: 200px;
+    height: 50px;
+    font-size: 20px;
+    border-radius: 10px;
+    border-style: none;
+    margin-top: 30px;
+}
+
+.Guesses{
+    background-color: #7a7a7a;
+    color: white;
+    padding: 7px;
+}
+.lastResult{
+    color: white;
+    padding: 7px;
+}
+
+p {
+    font-size: 15px;
+    text-align: center;
+}
+button{
+    background-color: #141414;
+    color: white;
+    width: 250px;
+    height: 50px;
+    font-size: 30px;
+    border-radius: 25px;
+    border-style: none;
+    margin-top: 30px;
+}
+
