--- a/Mini_project_1/style.css
+++ b/Mini_project_1/style.css
@@ -21,8 +21,8 @@
     --dk-text: hsl(198, 30%, 13%);
 }
 
-.container {
-    width: 100%;
+body {
+     width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -30,11 +30,136 @@
     justify-content: center;
     background: linear-gradient(231deg, rgba(22, 6, 40, 1) 0%, rgba(52, 28, 79,1) 50%, rgba(88, 7, 125, 1) 100%);
 }
-h1{ 
+.container {
+    width: 90%;
+    max-width: 450px;
+}
+h1 { 
   color: var(--pl-white);
   opacity: 0.75;
   text-transform: uppercase;
-  letter-spacing: 2px;
+  letter-spacing: 1.5px;
   text-align: center;
   line-height: 1.2;
+}
+.display-container {
+    position: relative; /*we r opverlapping thing onto this container so position-> relative */
+    background-color: var(--dk-voilet);
+    border-radius: 1rem;
+    border-bottom: 0.35rem solid var(--lt-violet2);
+    margin: 1rem 0;
+    padding: 0.35rem;
+}
+.display {
+    width: 100%;
+    background-color: transparent;
+    padding: 1.15rem 1rem;
+    color: var(--vb-yellow);
+    font-weight: 500;
+    font-size: 1.5rem;
+    line-height: 30px;
+    letter-spacing: 1px;
+    padding-right: 3.25rem;
+    border: none;
+}
+.display::placeholder {
+    position: absolute;
+    left: 1.5rem;
+    color: var(--vb-yellow);
+    font-size: 1.5rem;
+    line-height: 30px;
+    opacity: 0.65;
+    text-transform: uppercase;
+}
+.display-container button {
+   position: absolute;
+   top: 50%;
+   right: 1.5rem;
+   transform: translateY(-50%);
+   background: transparent;
+}
+
+.input-container {
+    width: 100%;
+    background-color: var(--dk-voilet);
+    border-radius: 1rem;
+    padding: 2rem;
+    border-bottom: 0.35rem solid var(--lt-violet2); 
+}
+.length-container {
+    display: flex;
+    justify-content: space-between; /* align two items parallaly */
+    align-items: center;
+}
+.length-container p:nth-child(1) {
+    color: var(--pl-white);
+    font-size: 1.5rem;
+}
+.length-container p:nth-child(2) {
+    color: var(--vb-yellow);
+    font-size: 1.5rem;
+}
+
+
+
+
+/* div, input, label we have to use css in all cause: div is aligning the 
+checkbox and txt together; input is the tick changing color; label is for the text */
+.check {
+    display: flex;
+    align-items: center;
+    margin: 1rem 0;
+    gap: 0 1rem;
+}
+.check input {
+    appearance: none; /* default style from bowser is not needed */
+    width: 20px;
+    height: 20px;
+    border: 1px solid var(--vb-cyan);
+    cursor: pointer;
+    position: relative; /* to overlap tick in this checkboxes */ 
+    border-radius: 0.35rem;
+}
+.check input:checked {
+    background-color: var(--vb-cyan); /* tick is not visible */
+}
+.check input:checked::before { /* content property */
+    content: '✔';
+    position: absolute; 
+    color: var(--dk-text);
+    font-size: 1.05rem;
+    font-weight: ;
+}
+
+
+
+
+.strength-container {
+    display: flex;
+    justify-content: space-between; /* align two items parallaly */
+    align-items: center;
+    margin-top: 1.75rem;
+    margin-bottom: 2rem;
+}
+.strength-container p {
+    color: var(--pl-white);
+    font-size: 1.5rem;
+}
+.indicator {
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 50%;
+}
+.generate-btn {
+    width:100%;
+    padding: 1rem 0;
+    background-color: var(--vb-violet);
+    text-align: center;
+    border-radius: 0.75rem;
+    border-bottom: 0.35rem solid var(--vb-yellow);
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color: var(--vb-yellow);
+    font-weight: 700;
+    font-size: 1.25rem;
 }
