--- a/Mini_project_1/style.css
+++ b/Mini_project_1/style.css
@@ -79,6 +79,29 @@ h1 {
    background: transparent;
 }
 
+.copyBtn {
+    background: transparent;
+    border: none;
+    outline: none;
+}
+.toolTip {
+    position: absolute;
+    background-color: var(--vb-violet2);
+    color: rgb(197, 197, 41);
+    font-size: 1.25rem;
+    top: -35px;
+    left: -25px;
+    padding: 5px 10px;
+    border-radius: 1rem;
+    transform: scale(0);
+    transform-origin: bottom;
+    transition: all 100ms ease-in-out;
+
+}
+.toolTip.active {
+    opacity: 1;
+    transform: scale(1);
+}
 .input-container {
     width: 100%;
     background-color: var(--dk-voilet);
@@ -99,9 +122,41 @@ h1 {
     color: var(--vb-yellow);
     font-size: 1.5rem;
 }
+/* Slider */
+.slider {
+    appearance: none;
+    width: 100%;
+    height: 0.75rem;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;  
+    cursor: pointer;
+    background-color: var(--lt-violet);
+    border-radius: 1rem; 
+    background-image: linear-gradient(var(--vb-violet), var(--vb-violet));
+    background-repeat: no-repeat;
+}
+.slider::-webkit-slider-thumb { /* accessing the thumb with the sudo selector */ 
+    appearance: none;
+    position: relative; /* slider line will not come in thumb background */
+    height: 2rem;
+    width: 2rem;
+    border-radius: 50%;
+    background-color: rgba(243, 211, 7);
+    cursor: pointer;
+    /* margin-top: -1px; */
+    box-shadow: 0px 0px 20px 0px rgba(245, 217, 35, 0.5);
+    transition: all 100ms ease-in;
+    z-index: 1;
+}
+.slider:focus {
+    outline: 3px solid  rgba(243, 211, 7); /* var(--vb-yellow); */
+}
+.slider::-webkit-slider-thumb:hover {
+    outline: 2px solid var(--vb-yellow);
+    background-color: var(--dk-voilet);
+    box-shadow: 0px 0px 25px 5px rgba(255, 229,61);
 
-
-
+}
 
 /* div, input, label we have to use css in all cause: div is aligning the 
 checkbox and txt together; input is the tick changing color; label is for the text */
@@ -123,17 +178,21 @@ checkbox and txt together; input is the tick changing color; label is for the te
 .check input:checked {
     background-color: var(--vb-cyan); /* tick is not visible */
 }
+/* Sudo Element Selector */
 .check input:checked::before { /* content property */
     content: '✔';
     position: absolute; 
     color: var(--dk-text);
     font-size: 1.05rem;
-    font-weight: ;
+    font-weight: 600;
+    left: 10%;
+    top: -20%;
 }
-
-
-
-
+.check label {
+    color: var(--pl-white);
+    font-size: 1.25rem;
+    letter-spacing: 0.75px;
+}
 .strength-container {
     display: flex;
     justify-content: space-between; /* align two items parallaly */
