--- a/Mini_project_2/style.css
+++ b/Mini_project_2/style.css
@@ -1,11 +1,223 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+
+body {
+  font-family: 'Poppins', sans-serif;
+}
+*, *::before, *::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    /* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
+} 
+:root {
+    --colorDark1: #112d4e;
+    --colorDark2: #3F72af;
+    --colorLight1: #dbe2ef;
+    --colorLight2: #f9f7f7;
+}
+.wrapper {
+    width: 100vw;
+    height: 100vh;
+    color: var(--colorLight2);
+    background-image: linear-gradient(160deg, #112d4e 0%, #3f72af 100%);
+}
+h1 {
+    text-align: center;
+    text-transform: uppercase;
+    padding-top: 20px;
+
+}
+.tab-container {
+    width: 90%;
+    max-width: 550px;
+    display: flex;
+    margin: 0 auto;
+    margin-top: 4rem;
+    justify-content: space-between;
+
+}
+.tab {
+    cursor: pointer;
+    font-size: 0.875rem;
+    letter-spacing: 1.75px;
+    padding: 5px 8px;
+}
 .tab.current-tab {
     background-color: rgba(219, 226, 239, 0.5);
     border-radius: 4px;
 }
+.weather-container{
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    flex-direction: column;
+    margin-block: 4rem;
+}
+.btn { /*grant access button*/
+    /* all: unset;   all: unset resets all inherited and default styles for the .btn class. */
+    appearance: none;
+    border: none;
+    color: white;
 
-/* define active class */
-.form-container.active {
-    scale: 1;
-    opacity: 1;
+
+    font-size: 1rem;
+    text-transform: uppercase;
+    border-radius: 5px;
+    background-color: var(--colorDark2);
+    cursor: pointer;
+    padding: 10px 30px;
+}
+/* JS logic will hide/unhide all details */
+.sub-container {
+   display: flex;
+   flex-direction: column;
+   align-items: center;  
+}
+.grant-location-container {
+    display: none; /* simply hide it */
+}
+.grant-location-container.active {
+    display: flex ; /* active class will show it */
+}
+.grant-location-container img {
+    margin-bottom: 2rem;
+}
+.grant-location-container p:first-of-type {
+    font-size: 1.75rem;
+    font-weight: 600;
+}
+.grant-location-container p:last-of-type {
+    font-size: 0.85rem;
+    font-weight: 500;
+    margin-top: 0.75rem;
+    margin-bottom: 1.75rem;
+    letter-spacing: 0.75px;
+
+}
+.Loading-container {
+    display: none; /* none to hide */
+}
+.Loading-container.active {
     display: flex;
 }
+.Loading-container p{
+    text-transform: uppercase;
+}
+
+
+.user-info-container {
+    display: none;
+ }
+.user-info-container.active {
+    display: flex;
+}
+.name{
+    display: flex;
+    align-items: center;
+    gap: 0 0.5rem;
+    margin-bottom: 1rem;
+}
+.user-info-container p {
+    font-size: 1.5rem;
+    font-weight: 200;
+}
+.user-info-container img {
+    width: 90px;
+    height: 90px;
+}
+
+.name p{
+    font-size: 2rem;
+}
+.name img {
+    width: 35px;
+    height: 35px;
+    /* object-fit: contain; */
+}
+.user-info-container p[data-temp] {
+    font-size:2.75rem;
+    font-weight: 500;
+}
+.parameter-container {
+    display: flex;
+    gap: 10px 20px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2rem;
+}
+.parameter {
+    background-color: rgba(219, 226, 239, 0.5);
+    border-radius: 7px;
+    width: 90%;
+    max-width: 200px;
+    padding: 1.25rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* if flex-direction is column */
+    gap: 5px 0;
+}
+.parameter img {
+    width: 40px;
+    height: 40px;
+}
+.parameter p:first-of-type {
+    font-size: 1.25rem;
+    font-weight: 600;
+    text-decoration: uppercase;
+}
+.parameter p:last-of-type {
+    font-size: 1.15rem;
+    font-weight: 200;
+}
+
+.form-container {
+    display: none;
+
+}
+.form-container.active {
+    display: flex;
+    width: 100%;
+    max-width: 550px;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    gap: 0 10px;
+    margin-bottom: 3rem;
+}
+.form-container input {
+    all: unset;
+    width: calc(100%- 80px);
+    height: 40px;
+    padding: 0 20px;
+    background-color: rgba(219, 226, 239, 0.5);
+    border-radius: 10px;
+}
+.form-container input::placeholder {
+    color: rgba(255, 255, 255, 0.7);
+}
+.form-container input:focus {
+    outline: 3px solid rgba(255, 255, 255, 0.7);;
+}
+.form-container .btn {
+    /* background: transparent; */
+    height: 60px;
+    width: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: unset;
+    border-radius: 100%;
+
+}
+
+
+
+
+
+
+/* define active class 
+.form-container.active {
+    scale: 1;
+    opacity:  1;
+    display: flex;
+} */
